Revert "Bratseth/phrase segmenting feature flag"