@@ -11,7 +11,6 @@ import org.junit.Test;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 
 import static org.junit.Assert.assertEquals;
@@ -35,7 +34,7 @@ public class ExactMatchAndDefaultIndexTestCase {
         q.getModel().setExecution(new Execution(new Execution.Context(null, facts, null, null, null)));
         assertEquals("AND testexact:a/b testexact:foo.com", q.getModel().getQueryTree().getRoot().toString());
         q = new Query("?query=" + enc("a/b foo.com"));
-        assertEquals("AND a b foo com", q.getModel().getQueryTree().getRoot().toString());
+        assertEquals("AND \"a b\" \"foo com\"", q.getModel().getQueryTree().getRoot().toString());
     }
 
     @Test
@@ -45,7 +44,11 @@ public class ExactMatchAndDefaultIndexTestCase {
     }
 
     private String enc(String s) {
-        return URLEncoder.encode(s, StandardCharsets.UTF_8);
+        try {
+            return URLEncoder.encode(s, "utf-8");
+        } catch (UnsupportedEncodingException e) {
+            throw new RuntimeException(e);
+        }
     }
 
 }
